# bot-creator-api

./: .dockerignore  .envrc  .gitignore  DockerFile  Dockerfile  README.md  devenv.nix
.github/workflows/: build.yml
app/: discord-bot  go.mod  go.sum
app/cmd/: main.go
app/internal/: create_bot.go  middleware.go
app/internal/utils/: middleware.go
bot/: CMakeLists.txt
bot/include/: handle_actions.hpp  http_webhook_server.cpp  http_webhook_server.hpp  server.cpp  utils.cpp  utils.hpp
bot/include/actions/: delete.hpp
bot/locales/en/: translation.mo  translation.po
bot/ressources/: translation.po
bot/src/: handle_actions.cpp  http_webhook_server.cpp  main.cpp  utils.cpp
bot/src/actions/: delete.cpp
